# purpleair_data_logger

./: .gitignore  LICENSE  PYPI_TRUSTED_PUBLISHER_SETUP.md  PurpleAirAPI.py  PurpleAirDataLogger.py  PurpleAirDataLoggerPSQLStatements.py  README.md  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
behave_tests/: behave.ini  environment.py  requirements.txt
diagrams/: PAA_Data_Logger_Software_Stack.drawio  README.md
docs/: PurpleAirDataLoggerPSQLStatements.html
external_network_hardware_variant_json_samples/: 2.0+BME280+PMSX003-A.json  2.0+BME280+PMSX003-B+PMSX003-A.json  2.0+OPENLOG+31037 MB+DS3231+BME280+PMSX003-A.json  2.0+OPENLOG+31037 MB+DS3231+BME280+PMSX003-B+PMSX003-A.json  3.0+BME280+BME680+PMSX003-A.json  3.0+OPENLOG+31037 MB+DS3231+BME280+BME680+PMSX003-A+PMSX003-B.json  3.0+OPENLOG+31037 MB+DS3231+BME280+BME68X+PMSX003-A+PMSX003-B.json  README.md
grafana_dashboards/: PurpleAirAPI (PAA) Data Logger Grafana Dashboard-1658974279769.json  PurpleAirAPI (PAA) Data Logger Grafana Dashboard-1658978781374.json  PurpleAirAPI (PAA) Data Logger Grafana Dashboard-1660355898051.json  PurpleAirAPI (PAA) Data Logger Grafana Dashboard-1663473411775.json  PurpleAirAPI (PAA) Data Logger Grafana Dashboard-1663473706536.json
hardware_variant_json_samples/: 1.0+1M+PMSX003-O.json  2.0+1M+PMSX003-A.json
internal_network_hardware_variant_json_samples/: 2.0+BME280+PMSX003-A.json  3.0+OPENLOG+31037 MB+DS3231+BME280+BME68X+PMSX003-A+PMSX003-B.json  README.md
purpleair_data_logger/: PurpleAirAPI.py  (+16 more)
purpleair_data_logger.egg-info/: PKG-INFO  SOURCES.txt
(+105 files in other folders)
