[metadata]
name = purpleair_data_logger
version = 1.4.0a2
license = MIT
author = Carlos Santos
author_email = dose.lucky.sake@cloak.id
url = https://github.com/carlkidcrypto/purpleair_data_logger
keywords =
    purpleair_data_logger
    purple air
    purple air data logger
    PurpleAirPSQLDataLogger
    PurpleAirCSVDataLogger
    purple air api
    PurpleAirSQLiteDataLogger
platforms =
    Windows 32/64
    Linux 32/64
    MacOS 32/64
long_description_content_type = text/markdown
long_description = file: README.md
description_file = README.md
license_files = LICENSE

[options]
packages = purpleair_data_logger
install_requires =
    pg8000==1.31.2
    requests
    purpleair_api==1.2.0a2
python_requires = >=3.8
